[package]
name = "hb"
version = "0.2.1"
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
edition = "2021"

[dependencies]
clap = "4.5.4"
env_logger = "0.11.3"
hdrhistogram = "7.5.4"
indicatif = "0.17.8"
log = "0.4.21"
rand = "0.8.5"
ureq = { version = "2.9.7", features = ["charset"] }
url = "2.5.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
