[package]
name = "hb"
version = "0.3.0"
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
edition = "2021"

[dependencies]
clap = "4.5.26"
env_logger = "0.11.6"
hdrhistogram = "7.5.4"
indicatif = "0.17.9"
log = "0.4.22"
rand = "0.8.5"
ureq = { version = "2.10.1", features = ["charset"] }
url = "2.5.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
