[package]
name = "hb"
version = "0.4.0"
authors = ["Mark Pritchard <mpritcha@gmail.com>"]
edition = "2024"

[dependencies]
clap = "4.5.37"
env_logger = "0.11.8"
hdrhistogram = "7.5.4"
indicatif = "0.17.11"
log = "0.4.27"
rand = "0.9.1"
ureq = { version = "3.0.11", features = ["charset"] }
url = "2.5.4"

[dev-dependencies]
assert_approx_eq = "1.1.0"

[profile.release]
lto = "fat"
codegen-units = 1
